# libcr75

./: .travis.yml  50-pcscd-transcendcr75.rules  CMakeLists.txt  Info.plist  Makefile  README.md  ifdhandler.c  ifdhandler.h
CMakeModules/: FindLibUSB.cmake  FindPCSCLite.cmake  PkgConfig.cmake
